--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ border-radius: 50%;
     padding-top: 50px;
     box-shadow: 15px 4px 5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .first-rw-su{
@@ -397,7 +398,7 @@ border-radius: 50%;
 
 .spn-su{
     font-style: italic;
-
+    font-weight: bold;
 }
 
 .btn-su{
