added comment on css

--- a/style.css
+++ b/style.css
@@ -302,6 +302,8 @@ border-radius: 50%;
  height: 400px;
 }
 
+/* Comment: Silvia's css */
+
 .cont-su{
     height: 100vh;
     background-color: #220D75;
